adiciona Requisitos 5, 6, 7, 8, 9 e 10 finalizados

--- a/style.css
+++ b/style.css
@@ -14,3 +14,17 @@
 .trybewarts-login {
   display: flex;
 }
+
+.form-container {
+  display: flex;
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
+  flex-direction: column;
+}
+
+.form-container div #trybewarts-forms-logo {
+  height: 500px;
+}
