--- a/style.css
+++ b/style.css
@@ -25,6 +25,66 @@
   flex-direction: column;
 }
 
-.form-container div #trybewarts-forms-logo {
+#trybewarts-forms-logo {
   height: 500px;
+}
+
+.inputs-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-
+  /* background-color: aqua; */
+}
+
+.styles-container {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(113, 113, 168);
+  width: 100%;
+  align-items: center;
+}
+
+.first-input {
+  padding: 10px;
+  width: 50%;
+}
+
+.second-input {
+  width: 50%;
+  padding: 10px;
+}
+
+.third-input {
+  width: 50%;
+  padding: 10px;
+  order: -1;
+}
+
+.four-input {
+  width: 40%;
+  padding: 10px;
+  order: 2;
+}
+
+.five-input {
+  order: 1;
+  width: 10%;
+}
+
+hr {
+  margin: 10px;
+  border-width: 0;
+  background-color: black;
+  height: 2px;
+  border-radius: 100%;
+}
+
+.selectors-container {
+  display: flex;
+  background-color: aqua;
+}
+
+.family-container {
+  background-color: yellow;
+  width: 40%;
 }
