ajusta lint e lint:styles

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .inputs-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-
+  justify-content: space-between;
 }
 
 .styles-container {
@@ -82,5 +82,12 @@ hr {
 }
 
 .family-container {
+  display: flex;
+  flex-direction: column;
   width: 40%;
+}
+
+#radio-family {
+  display: flex;
+  flex-direction: column;
 }
