adiciona requisito 17 finalizado

--- a/style.css
+++ b/style.css
@@ -113,3 +113,13 @@ hr {
   display: flex;
   justify-content: center;
 }
+
+#agreement-container {
+  display: flex;
+  align-items: center;
+}
+
+#submit-btn {
+  background-color: green;
+  color: white;
+}
