concerta erros do lint styles

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);
@@ -34,7 +33,7 @@
 #button-login {
   background-color: rgba(39, 39, 104, 0.808);
   color: white;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .form-container {
@@ -45,7 +44,6 @@
   margin: 20px 50px;
   display: flex;
   width: 675px;
-  width: 50%;
   flex-direction: column;
 }
 
@@ -167,26 +165,27 @@ hr {
   transition: 0.5s;
 }
 
-  @media (max-width: 800px) {
-    .form-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    
-    #evaluation-form {
-      width: 100%;
-      order: 2;
-      padding: 0 10%;
-    }
+@media ( max-width : 800px ) {
 
-    #trybewarts-forms-logo {
-      margin: auto;
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-      order: 1;
-      height: 250px;
-    }
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+
+  #evaluation-form {
+    width: 100%;
+    order: 2;
+    padding: 0 10%;
+  }
+
+  #trybewarts-forms-logo {
+    margin: auto;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    order: 1;
+    height: 250px;
+  }
+}
